<resources>
    <string name="app_name">Mobile4 v 1.0</string>
    <string name="aviso_red_disponible">Red Disponible</string>
    <string name="aviso_red_no_disponible">Red No Disponible</string>
    <string name="titulo_activacion">Proceso Activación</string>
    <string name="hint_serie">Serie</string>
    <string name="hint_alias">Alias</string>
    <string name="hint_licencia">Licencia</string>
    <string name="hint_codigo">Codigo</string>
    <string name="boton_registro">Registro</string>
</resources>
