<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="mx.mobile4.cliente.RegistroActivity">


    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="34dp"
        android:text="@string/titulo_activacion"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        />

    <EditText
        android:id="@+id/etSerie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tvTitulo"
        android:layout_marginTop="36dp"
        android:enabled="false"
        android:ems="10"
        android:hint="@string/hint_serie"
         />

    <EditText
        android:id="@+id/etAlias"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:hint="@string/hint_alias"
        android:layout_below="@+id/etSerie"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/etLicencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etAlias"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/hint_licencia" />

    <EditText
        android:id="@+id/etCodigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etLicencia"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/hint_codigo" />

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etCodigo"
        android:layout_centerHorizontal="true"
        android:text="@string/boton_registro" />
</RelativeLayout>
